[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dsp_pipeline"
version = "0.1.0"
description = "This project is meant to explore DSP workflows with modern Python programming techniques and how the fundamentals of digital communications can be applied to build practical, modular, and reusable algorithms"
requires-python = ">=3.12"
authors = [
    { name = "Josiah Bouchard", email = "josiahbouchard86@yahoo.com" }
]
dependencies = [
    "numpy",
    "matplotlib",
    "Pillow"
]

# Where the Python packages live (src layout)
[tool.setuptools.packages.find]
where = ["src"]

# pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-s"